# SpreadCalculator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  config.py  main.py
src/services/: spread_service.py
src/storage/: __init__.py  quote_storage.py  spread_storage.py
src/utils/: logger.py
